...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- User Info Card -->
            <LinearLayout
                android:id="@+id/userInfoCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_main_card"
                android:orientation="horizontal"
                android:padding="12dp"
...
